--- a/LetsRollProject/pom.xml
+++ b/LetsRollProject/pom.xml
@@ -129,6 +129,16 @@
             <artifactId>google-api-services-oauth2</artifactId>
             <version>v2-rev29-1.13.2-beta</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
