--- a/LetsRollProject/src/main/webapp/WEB-INF/web.xml
+++ b/LetsRollProject/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="3.1">
     <display-name>TestSpring1</display-name>
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>welcome</welcome-file>
     </welcome-file-list>
     <servlet>
         <servlet-name>spring</servlet-name>
